--- a/finals/src/main.fxml
+++ b/finals/src/main.fxml
@@ -1,11 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="781.0" prefWidth="1194.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="772.0" prefWidth="1203.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="699.0" fitWidth="1142.0" layoutX="36.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../Downloads/MuIV2JN.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="520.0" layoutY="353.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@icon.png" />
+               </image>
+            </ImageView>
+            <Text layoutX="343.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Reminder App">
+               <font>
+                  <Font name="Segoe Print" size="43.0" />
+               </font>
+            </Text>
+            <Button layoutX="199.0" layoutY="404.0" mnemonicParsing="false" text="Set Due Date">
+               <font>
+                  <Font name="Courier New" size="19.0" />
+               </font>
+            </Button>
+            <Button layoutX="823.0" layoutY="404.0" mnemonicParsing="false" text="Upload and Edit">
+               <font>
+                  <Font name="Courier New" size="19.0" />
+               </font>
+            </Button>
+         </children></AnchorPane>
    </left>
 </BorderPane>
