--- a/finals/src/main.fxml
+++ b/finals/src/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,35 +9,34 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="781.0" prefWidth="1194.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1194.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AppController">
    <left>
-      <AnchorPane prefHeight="772.0" prefWidth="1203.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="818.0" prefWidth="1194.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="699.0" fitWidth="1142.0" layoutX="36.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="746.0" fitWidth="1224.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../Downloads/MuIV2JN.jpg" />
+                  <Image url="@MuIV2JN.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="520.0" layoutY="353.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="24.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@icon.png" />
                </image>
             </ImageView>
-            <Text layoutX="343.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Reminder App">
+            <Text layoutX="174.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student Reminder App">
                <font>
                   <Font name="Segoe Print" size="43.0" />
                </font>
             </Text>
-            <Button layoutX="199.0" layoutY="404.0" mnemonicParsing="false" text="Set Due Date">
+            <Button fx:id="GENERATE" layoutX="287.0" layoutY="188.0" mnemonicParsing="false" onAction="#onClickGen" prefHeight="23.0" prefWidth="100.0" text="GENERATE">
                <font>
-                  <Font name="Courier New" size="19.0" />
+                  <Font name="Courier New" size="16.0" />
                </font>
             </Button>
-            <Button layoutX="823.0" layoutY="404.0" mnemonicParsing="false" text="Upload and Edit">
-               <font>
-                  <Font name="Courier New" size="19.0" />
-               </font>
-            </Button>
+            <TextField fx:id="DATE" layoutX="76.0" layoutY="190.0" prefHeight="25.0" prefWidth="45.0" promptText="DATE" />
+            <TextField fx:id="MONTH" layoutX="137.0" layoutY="190.0" prefHeight="25.0" prefWidth="61.0" promptText="MONTH" />
+            <TextField fx:id="YEAR" layoutX="217.0" layoutY="190.0" prefHeight="25.0" prefWidth="43.0" promptText="YEAR" />
+            <Button fx:id="EXIT" layoutX="1064.0" layoutY="64.0" mnemonicParsing="false" onAction="#onClickExit" text="Button" />
          </children></AnchorPane>
    </left>
 </BorderPane>
