--- a/finals/src/main.fxml
+++ b/finals/src/main.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -41,8 +42,20 @@
             <TextField fx:id="HOUR" layoutX="411.0" layoutY="192.0" prefHeight="25.0" prefWidth="50.0" promptText="HOUR" />
             <TextField fx:id="MINUTE" layoutX="476.0" layoutY="192.0" prefHeight="25.0" prefWidth="67.0" promptText="MINUTES" />
             <TextField fx:id="TASK" layoutX="25.0" layoutY="192.0" promptText="TASK NAME" />
-            <TextArea fx:id="tarea" layoutX="24.0" layoutY="305.0" prefHeight="200.0" prefWidth="200.0" />
-            <Button fx:id="refresh" layoutX="37.0" layoutY="271.0" mnemonicParsing="false" onAction="#onClickRefresh" text="REFRESH" />
+            <TextArea fx:id="tarea" layoutX="24.0" layoutY="272.0" prefHeight="469.0" prefWidth="521.0">
+               <font>
+                  <Font size="16.0" />
+               </font></TextArea>
+            <Button fx:id="refresh" layoutX="25.0" layoutY="237.0" mnemonicParsing="false" onAction="#onClickGen" text="ADD" />
+            <TextArea fx:id="tenM" layoutX="905.0" layoutY="211.0" prefHeight="200.0" prefWidth="200.0" />
+            <TextArea fx:id="halfTime" layoutX="905.0" layoutY="515.0" prefHeight="200.0" prefWidth="200.0" />
+            <Label fx:id="TENL" layoutX="905.0" layoutY="182.0" text="10 MINUTES LEFT" />
+            <Label fx:id="HL" layoutX="905.0" layoutY="490.0" text="HALF THE TIME LEFT" />
+            <Label fx:id="DD" layoutX="602.0" layoutY="241.0" text="Due Dates" />
+            <TextArea fx:id="upcoming" layoutX="597.0" layoutY="264.0" prefHeight="200.0" prefWidth="217.0" />
+            <TextField fx:id="tcompleted" layoutX="597.0" layoutY="578.0" promptText="Task Completed" />
+            <Button fx:id="complete" layoutX="773.0" layoutY="578.0" mnemonicParsing="false" text="Complete" />
+            <Button fx:id="rrefresh" layoutX="1091.0" layoutY="89.0" mnemonicParsing="false" onAction="#onCLickRefresh" text="Refresh" />
          </children></AnchorPane>
    </left>
 </BorderPane>
